--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Wayu Mart - Your one-stop solution for buying medicines and ayurvedic products online. Quality healthcare products at the best prices."
+      content="Wayu Mart is your premier destination for a wide range of medicines, including prescription drugs, over-the-counter medications, and high-quality ayurvedic products. Explore our extensive catalog of healthcare solutions designed to meet all your wellness needs. Enjoy fast shipping, competitive prices, and exceptional customer service. Shop online for vitamins, supplements, herbal remedies, and more at Wayu Mart, where your health is our priority."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <!-- Open Graph Meta Tags for better SEO -->
     <meta property="og:title" content="Wayu Mart - Buy Medicines and Ayurvedic Products Online" />
-    <meta property="og:description" content="Wayu Mart offers a wide range of medicines and ayurvedic products online. Enjoy easy shopping and fast delivery." />
+    <meta property="og:description" content="Wayu Mart offers a vast selection of medicines and ayurvedic products online, including prescription drugs, over-the-counter medications, vitamins, supplements, and herbal remedies. Experience convenient shopping and fast delivery with top-notch customer service at Wayu Mart." />
     <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
     <meta property="og:url" content="https://www.wayumart.com" />
     <meta property="og:type" content="website" />
@@ -22,17 +22,17 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Wayu Mart - Buy Medicines and Ayurvedic Products Online" />
-    <meta name="twitter:description" content="Wayu Mart offers a wide range of medicines and ayurvedic products online. Enjoy easy shopping and fast delivery." />
+    <meta name="twitter:description" content="Discover Wayu Mart, your online store for a wide variety of medicines and ayurvedic products. Find prescription drugs, OTC meds, vitamins, and herbal supplements with ease. Enjoy fast shipping and excellent customer support at Wayu Mart." />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100:200:300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
-    <title>Wayu Mart - Buy Medicines and Ayurvedic Products Online</title>
+    <title>Wayu Mart - Buy Medicines, Vitamins, and Ayurvedic Products Online</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
